[gd_scene load_steps=2 format=3 uid="uid://3bretq8smwia"]

[ext_resource type="Script" uid="uid://d1p1w2m1bjy6" path="res://scripts/ui/hud.gd" id="1_xmy64"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_xmy64")

[node name="MessageLabel" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -202.0
offset_right = 282.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 61
text = "Hello"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="."]
visible = false
offset_left = 17.0
offset_top = 3.0
offset_right = 155.0
offset_bottom = 121.0
theme_override_font_sizes/font_size = 56
text = "0"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
